[package]
name = "cargo-avrdude"
version = "0.1.0"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2021"
description = "Cargo extension for seamlessly passing the compiled binary to AVRDUDE"
readme = "README.md"
repository = "https://github.com/karolbelina/cargo-avrdude"
license = "MIT"
keywords = ["cargo", "extension", "avr", "avrdude"]
categories = ["command-line-utilities", "development-tools", "embedded"]

[dependencies]
cargo_metadata = "0.15"
colored = "2"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
